releases/0.7.0/index.md
---
title: Apache Kudu (incubating) beta release 0.7.0
layout: single_col
active_nav: download
single_col_extra_classes: releases
---

<!--

Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.

-->

## Apache Kudu (incubating) beta release 0.7.0

See the [Kudu 0.7.0 Release Notes](docs/release_notes.html).

Downloads of Kudu 0.7.0 are available in the following formats:

* [Kudu 0.7.0 source tarball](http://www.apache.org/dyn/closer.lua/incubator/kudu/0.7.0) [MD5](http://archive.apache.org/dist/incubator/kudu/0.7.0/apache-kudu-incubating-0.7.0.tar.gz.md5) [Signature](http://archive.apache.org/dist/incubator/kudu/0.7.0/apache-kudu-incubating-0.7.0.tar.gz.asc)

You can use the [KEYS file](https://archive.apache.org/dist/incubator/kudu/KEYS) to verify the included GPG signature.

Additional links:

* [Kudu 0.7.0 Documentation](docs/)
* [Kudu 0.7.0 Java API docs](apidocs/)
